--- a/nav/webapp/css/head.css
+++ b/nav/webapp/css/head.css
@@ -117,7 +117,7 @@ html, body {
     height: 100%;
     position: absolute;
     right: 150px;
-    background: transparent url(../../images/message.png) center 27px no-repeat;
+    background: transparent url(../images/message.png) center 27px no-repeat;
     -webkit-background-size: 26px 24px;
     background-size: 26px 24px;
     cursor: pointer;
@@ -240,14 +240,14 @@ tr, td {
     display: inline-block;
     width: 30px;
     height: 30px;
-    background: url(../../images/nav_btn_t.png) center no-repeat;
+    background: url(../images/nav_btn_t.png) center no-repeat;
     background-size: 22px 18px;
 }
 .showbtn .to-right{
     display: inline-block;
     width:30px;
     height: 30px;
-    background: url(../../images/nav_btn_v.png) center no-repeat;
+    background: url(../images/nav_btn_v.png) center no-repeat;
     background-size: 20px;
 }
 .showbtn {
@@ -590,7 +590,7 @@ table {
     left: 8px;
     color: #fff;
     font-size: 16px;
-    background: #fff url(/images/menu-btn.png) center center no-repeat;
+    background: #fff url(../images/menu-btn.png) center center no-repeat;
 }
 .home-page-text {
     right: 14px;
@@ -857,7 +857,7 @@ table {
     background: #ddd;
 }
 .bg_default{
-    background: url(../../images/bg.jpg) no-repeat;
+    background: url(../images/bg.jpg) no-repeat;
     -moz-background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;
