--- a/css/public_skin.css
+++ b/css/public_skin.css
@@ -91,7 +91,7 @@ table .btn,table .form-control {
 
 /*    container 样式*/
 #page {
-    background: none repeat scroll 0 0 #f9f9f9;
+    background: none repeat scroll 0 0 #fafbfc;
     height: 100%;
     min-width: 320px;
 }
@@ -104,13 +104,13 @@ table .btn,table .form-control {
 
 .box.border.green {
     border: 1px solid #9db36a;
-    border: 1px solid #e5e5e5 !important;
-    margin-bottom: 20px;
+    /* border: 1px solid #e5e5e5 !important; */
+    margin-bottom: 30px;
     background-color: #fff;
     border: 1px solid transparent;
     border-radius: 4px;
-    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+    -webkit-box-shadow: 0 0 35px 0 rgba(154,161,171,.15);
+    box-shadow: 0 0 35px 0 rgba(154,161,171,.15);
 }
 .box.border.green > .box-title {
     background-color: #ffffff !important;
