--- a/css/cloud-admin.css
+++ b/css/cloud-admin.css
@@ -1975,18 +1975,18 @@ fieldset[disabled] .btn-default.active {
   background-color: #fff;
 }
 .btn-primary {
-  color: #ffffff;
-  background-color: #5e87b0;
-  border-color: #507aa4;
+  color: #fff;
+  background-color: #727cf5;
+  border-color: #727cf5;
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-  color: #ffffff;
-  background-color: #4b739a;
-  border-color: #3c5c7b;
+  color: #fff;
+  background-color: #4e5bf2;
+  border-color: #4250f2;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -2008,8 +2008,8 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #5e87b0;
-  border-color: #507aa4;
+  background-color: #4e5bf2;
+  border-color: #4250f2;
 }
 .btn-primary .badge {
   color: #5e87b0;
