--- a/nav/webapp/css/head.css
+++ b/nav/webapp/css/head.css
@@ -35,11 +35,11 @@ html, body {
 /*iconfonts*/
 @font-face {
     font-family: 'iconfont';  /* project id 790454 */
-    src: url('//at.alicdn.com/t/font_790454_rt4jmyw45yr.eot');
-    src: url('//at.alicdn.com/t/font_790454_rt4jmyw45yr.eot?#iefix') format('embedded-opentype'),
-    url('//at.alicdn.com/t/font_790454_rt4jmyw45yr.woff') format('woff'),
-    url('//at.alicdn.com/t/font_790454_rt4jmyw45yr.ttf') format('truetype'),
-    url('//at.alicdn.com/t/font_790454_rt4jmyw45yr.svg#iconfont') format('svg');
+    src: url('https://at.alicdn.com/t/font_790454_rt4jmyw45yr.eot');
+    src: url('https://at.alicdn.com/t/font_790454_rt4jmyw45yr.eot?#iefix') format('embedded-opentype'),
+    url('https://at.alicdn.com/t/font_790454_rt4jmyw45yr.woff') format('woff'),
+    url('https://at.alicdn.com/t/font_790454_rt4jmyw45yr.ttf') format('truetype'),
+    url('https://at.alicdn.com/t/font_790454_rt4jmyw45yr.svg#iconfont') format('svg');
 }
 .iconfont {
     font-family:"iconfont" !important;
