--- a/css/themes/default.css
+++ b/css/themes/default.css
@@ -79,7 +79,7 @@
 /* Navbar Dropdown */
 .dropdown-menu {
   background: none repeat scroll 0 0 #FFFFFF;
-  border: 1px solid #C7CBD5;
+  border: 1px solid #d9e3e9;
   display: none;
   float: left;
   left: 0;
