--- a/css/cloud-admin.css
+++ b/css/cloud-admin.css
@@ -1422,7 +1422,7 @@ th {
 }
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-  background-color: #f5f5f5;
+  background-color: #f1f3fa;
 }
 table col[class*="col-"] {
   position: static;
@@ -2916,8 +2916,8 @@ input[type="button"].btn-block {
   border: 1px solid #cccccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  -webkit-box-shadow: 0 0 35px 0 rgba(154,161,171,.15);
+  box-shadow: 0 0 35px 0 rgba(154,161,171,.15);
   background-clip: padding-box;
 }
 .dropdown-menu.pull-right {
@@ -8999,3 +8999,20 @@ ul.stats li small {
 }
 
 .searchInputBg{cursor:pointer; background:url(../img/search-icon.png) right 50% no-repeat;}
+
+.fl{
+  float: left;
+}
+.fr{
+  float:right;
+}
+.clearfix:after {
+  content: "";
+  display: block;
+  visibility: hidden;
+  height: 0
+}
+
+.clearfix {
+  zoom:1
+}
