--- a/nav/webapp/css/index.css
+++ b/nav/webapp/css/index.css
@@ -108,7 +108,7 @@ th {
 }
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-  background-color: #f5f5f5;
+  background-color: #f1f3fa;
 }
 table col[class*="col-"] {
   position: static;
